Bug 1776208 - Add to the in-content buttons a visible border. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D150119

--HG--
extra : moz-landing-system : lando

--- a/mail/themes/linux/mail/common.css
+++ b/mail/themes/linux/mail/common.css
@@ -9,6 +9,8 @@
 
 :root {
   --in-content-button-height: 2.2em;
+  --in-content-button-border-color: color-mix(in srgb, currentColor 9%, transparent);
+  --in-content-button-border-color-hover: color-mix(in srgb, currentColor 17%, transparent);
 }
 
 @media (prefers-color-scheme: dark) {
